@@ -6,6 +6,7 @@ import com.c108.meetz.domain.User;
 import com.c108.meetz.dto.request.FanSaveDto;
 import com.c108.meetz.dto.request.MeetingSaveRequestDto;
 import com.c108.meetz.dto.response.*;
+import com.c108.meetz.dto.response.StarListResponseDto.StarList;
 import com.c108.meetz.exception.*;
 import com.c108.meetz.repository.BlackListRepository;
 import com.c108.meetz.repository.ManagerRepository;
@@ -20,14 +21,13 @@ import org.apache.poi.ss.usermodel.*;
 
 import java.io.InputStream;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static com.c108.meetz.domain.Role.FAN;
 import static com.c108.meetz.domain.Role.STAR;
+import static com.c108.meetz.dto.response.MeetingListResponseDto.*;
 
 @Service
 @RequiredArgsConstructor
@@ -44,11 +44,8 @@ public class MeetingService {
         if(!SecurityUtil.getCurrentUserRole().equals("MANAGER")){
             throw new UnauthorizedException("접근 권한이 없습니다.");
         }
-        Optional<Manager> manager = managerRepository.findByEmail(SecurityUtil.getCurrentUserEmail());
-        if (manager.isEmpty()) {
-            throw new NotFoundException("Manager not found");
-        }
-        Meeting meeting = meetingSaveRequestDto.toMeeting(manager.get());
+        Manager manager = getManager();
+        Meeting meeting = meetingSaveRequestDto.toMeeting(manager);
         meeting.setMeetingEnd(calculateMeetingEnd(meetingSaveRequestDto));
         meetingRepository.save(meeting);
 
@@ -140,9 +137,8 @@ public class MeetingService {
     }
 
     public void checkBlackList(FanSaveDto fanSaveDto) {
-        String email = SecurityUtil.getCurrentUserEmail();
-        int managerId = managerRepository.findByEmail(email).get().getManagerId();
-        if(blackListRepository.existsByNameAndEmailAndPhoneAndManager_ManagerId(fanSaveDto.name(), fanSaveDto.email(), fanSaveDto.phone(), managerId)){
+        Manager manager = getManager();
+        if(blackListRepository.existsByNameAndEmailAndPhoneAndManager_ManagerId(fanSaveDto.name(), fanSaveDto.email(), fanSaveDto.phone(), manager.getManagerId())){
             throw new BadRequestException("블랙리스트입니다.");
         }
     }
@@ -151,22 +147,20 @@ public class MeetingService {
         // 주어진 meetingId로 미팅을 조회
         Meeting meeting = meetingRepository.findById(meetingId)
                 .orElseThrow(() -> new NotFoundException("Meeting not found"));
-        Optional<Manager> manager = managerRepository.findByEmail(SecurityUtil.getCurrentUserEmail());
-        if(meeting.getManager() != manager.get()){
+        Manager manager = getManager();
+        if(meeting.getManager().getManagerId() != manager.getManagerId()){
             throw new BadRequestException("접근 권한이 없습니다.");
         }
         // 미팅 번호에 따라 팬과 스타 리스트를 조회
-        List<User> stars = userRepository.findByMeeting_MeetingIdAndRole(meetingId, STAR);
-        List<User> fans = userRepository.findByMeeting_MeetingIdAndRole(meetingId, FAN);
-
         // 팬 리스트와 스타 리스트를 DTO로 변환
-        List<StarResponseDto> starList = stars.stream()
-                .map(star -> new StarResponseDto(star.getUserId(), star.getName(), star.getEmail(), star.getPassword()))
-                .collect(Collectors.toList());
+        List<StarResponseDto> starList = userRepository.findByMeeting_MeetingIdAndRole(meetingId, STAR).stream()
+                .map(StarResponseDto::from)
+                .toList();
 
-        List<FanResponseDto> fanList = fans.stream()
-                .map(fan -> new FanResponseDto(fan.getUserId(), fan.getName(), fan.getEmail(), fan.getPhone()))
-                .collect(Collectors.toList());
+        List<FanResponseDto> fanList = userRepository.findByMeeting_MeetingIdAndRole(meetingId, FAN).stream()
+                .map(FanResponseDto::from)
+                .toList();
+
         return MeetingDetailResponseDto.of(meeting, starList, fanList);
 
     }
@@ -174,8 +168,8 @@ public class MeetingService {
     public MeetingSaveResponseDto updateMeeting(int meetingId, MeetingSaveRequestDto meetingSaveRequestDto) {
         Meeting meeting = meetingRepository.findById(meetingId)
                 .orElseThrow(() -> new NotFoundException("Meeting not found"));
-        Optional<Manager> manager = managerRepository.findByEmail(SecurityUtil.getCurrentUserEmail());
-        if(meeting.getManager() != manager.get()){
+        Manager manager = getManager();
+        if(meeting.getManager().getManagerId() != manager.getManagerId()){
             throw new BadRequestException("접근 권한이 없습니다.");
         }
         meetingSaveRequestDto.updateMeeting(meeting);
@@ -196,6 +190,85 @@ public class MeetingService {
 
         return new MeetingSaveResponseDto(meeting.getMeetingId());
 
+    }
+
+    public MeetingListResponseDto getMeetingList(boolean flag){
+        Manager manager = getManager();
+        LocalDateTime currentTime = LocalDateTime.now();
+        List<MeetingList> meetings = new ArrayList<>();
+        if (flag) { //flag==true 이면 완료된 미팅 찾기
+            meetings = meetingRepository.findCompletedMeetingsByManagerId(manager.getManagerId(), currentTime).stream()
+                    .map(meeting -> {
+                        int cnt = userRepository.findByMeeting_MeetingIdAndRole(meeting.getMeetingId(), FAN).size();
+                        return MeetingList.of(meeting, cnt, flag);
+                    })
+                    .collect(Collectors.toList());
+        } else { //flag == false 이면 미완료 미팅 찾기
+            meetings = meetingRepository.findIncompleteMeetingsByManagerId(manager.getManagerId(), currentTime).stream()
+                    .map(meeting -> {
+                        int cnt = userRepository.findByMeeting_MeetingIdAndRole(meeting.getMeetingId(), FAN).size();
+                        return MeetingList.of(meeting, cnt, flag);
+                    })
+                    .collect(Collectors.toList());
+        }
+        Map<String, List<MeetingList>> month = meetings.stream()
+                .collect(Collectors.groupingBy(meeting -> meeting.getMeetingStart().format(DateTimeFormatter.ofPattern("MM"))));
+
+        return MeetingListResponseDto.from(month);
+    }
+
+    //DTO 내부클래스를 사용하는 방법
+    public StarListResponseDto getStarList(int meetingId) {
+        Manager manager = getManager();
+        Meeting meeting = meetingRepository.findById(meetingId)
+                .orElseThrow(() -> new BadRequestException("Meeting not found"));
+
+        if (meeting.getManager().getManagerId() != manager.getManagerId()) {
+            throw new BadRequestException("접근 권한이 없습니다.");
+        }
+
+        List<StarList> starList = userRepository.findByMeeting_MeetingIdAndRole(meetingId, STAR).stream()
+                .map(StarList::from)
+                .toList();
+
+        return StarListResponseDto.from(starList);
+    }
+
+    //DTO를 다 쪼개서 쓰는 방법
+    public FanListResponseDto getFanList(int meetingId) {
+        Manager manager = getManager();
+        Meeting meeting = meetingRepository.findById(meetingId)
+                .orElseThrow(() -> new BadRequestException("Meeting not found"));
+
+        if (meeting.getManager().getManagerId() != manager.getManagerId()) {
+            throw new BadRequestException("접근 권한이 없습니다.");
+        }
+
+        List<FanResponseDto> fanList = userRepository.findByMeeting_MeetingIdAndRole(meetingId, FAN).stream()
+                .map(FanResponseDto::from)
+                .toList();
+
+        return new FanListResponseDto(fanList);
+
+    }
+
+    public void deleteMeeting(int meetingId) {
+        Manager manager = getManager();
+        Meeting meeting = meetingRepository.findById(meetingId)
+                .orElseThrow(() -> new BadRequestException("Meeting not found"));
+
+        if (meeting.getManager().getManagerId() != manager.getManagerId()) {
+            throw new BadRequestException("접근 권한이 없습니다.");
+        }
+
+        // 추후 채팅방 구현 시 미팅에 속한 사용자와 채팅방 삭제 쿼리 추가 논의 필요
+        meetingRepository.delete(meeting);
+    }
+
+    private Manager getManager(){
+        String email = SecurityUtil.getCurrentUserEmail();
+        return managerRepository.findByEmail(email).orElseThrow(()->
+                new NotFoundException("manager not found"));
     }
 
 }
